# yeti

./: .gitignore  Cargo.toml  hk.pkl  justfile
.github/: README.md
.github/workflows/: ci.yml  version-bump.yml
src/: args.rs  cerebras.rs  config.rs  error.rs  git.rs  main.rs  prompt.rs
src/tui/: app.rs  mod.rs  theme.rs  widgets.rs
