[package]
name = "yeti"
version = "0.1.2"
edition = "2024"
default-run = "yeti"

[[bin]]
name = "yeti"
path = "src/main.rs"

[[bin]]
name = "yeet"
path = "src/bin/yeet.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
git2 = { version = "0.20.0", features = ["vendored-libgit2"] }
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
ureq = { version = "3.0.11", features = ["json"] }
comfy-table = "7.1"
